update with aws experience

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -17,12 +17,11 @@
 %% Personal data
 \firstname{Jakub}
 \familyname{Sokołowski}
-\title{System Administrator}
-\address{01-684 Warsaw}{Klaudyny 32 m 1}
-\mobile{600~858~250}
-\phone{+48~(22)~833~77~50}
+\title{DevOps and Event Management Specialist}
+\address{110 Cedar House}{Mespil Estate, Sussex Road}{Dublin, D04 T9W3}
+\mobile{+48 600 858 250}
+\mobile{+353 87 112 8563}
 \email{panswiata@gmail.com}
-\homepage{github.com/PonderingGrower}
 \extrainfo{Born on 01.02.1988}
 \photo[74pt][0.5pt]{me}
 
@@ -36,35 +35,34 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
-\cventry{2014--Now\\\includegraphics[width=\hintscolumnwidth]{codility}}{System Administrator}{Codility Polska Sp z o.o.}{Warsaw}{Full time}{Management of internal development tools and administration and expansion of infrastructure of the main Codility service. Responsible for:}
-    \cvlistitem{Management of server configuration using Chef}
-    \cvlistitem{Deployment automation with Fabric scripts}
+\cventry{2015--Now\\\includegraphics[width=\hintscolumnwidth]{aws}}{System Development Engineer}{Amazon Web Services}{Dublin}{Full time}
+{Part of team responding to world wide breakage in Amazon infrastructure and developing tools for event detection, management, and automation. Responsible for:}
+    \cvlistitem{Large scale event management}
+    \cvlistitem{Assembling and leading event resolution teams}
+    \cvlistitem{System scoping and architecture design}
+    \cvlistitem{Development of tools for event management and detection}
+    \cvlistitem{Development of infrastructure support and management tools}
+\cventry{2014--2015\\\includegraphics[width=\hintscolumnwidth]{codility}}{System Administrator}{Codility Polska Sp z o.o.}{Warsaw}{Full time}
+{Management of internal development tools and administration and expansion of infrastructure of the main Codility service. Responsible for:}
+    \cvlistitem{Management of server configuration using Chef and deployments automation with Fabric}
     \cvlistitem{Maintenance of monitoring systems(Icinga, Grafana, Sentry, Pingdom)}
     \cvlistitem{Maintenance of logging systems(logstash, elasticsearch, Kibana)}
     \cvlistitem{Integration of internal development tools(Trac, GitLab, Jenkins)}
     \cvlistitem{Consultations with clients regarding data security and privacy}
-\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{ascen}}{System Administrator and Developer}{Ascen Sp. z o.o}{Warsaw}{Full time}{Working as system administrator as well as a developer for Ascen. Taking part in multiple projects involving Extracting, Transforming and Loading data. Amongst them:}
-    \cvitem{}{Creating an ETL solution for LOT Polish Airlines}
-    \cvlistitem{Developing processes for loading and exporting data in multiple formats in Microsoft SSIS}
-    \cvlistitem{Designing a robust logging infrastructure for reliable ETL process monitoring}
-    \cvitem{}{Creation of reporting solution for Polish Office for Foreigners}
-    \cvlistitem{Creation of a comprehensive backup plan for the whole solution}
-    \cvlistitem{Testing and resolving performance issues with Microsoft Reporting Services and SharePoint}
-    \cvlistitem{Resolving security issues involving certificates}
-    \cvitem{}{Creation of infrastructure for sharing of a 3D rendering farm for Newmotion Studios}
-    \cvlistitem{Creation of automating solution for starting Autodesk Backburner jobs}
-    \cvlistitem{Design and setup of access methods for clients and partners through FTP and WebDAV}
-    \cvitem{}{Support of IBM DataStage for TUiR Warta}
-    \cvlistitem{Resolving database connection issues}
-    \cvlistitem{Diagnosing IBM Information Server configuration errors}
-\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{System Administrator}{Raiffeisen Polbank S.A.}{Warsaw}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups. Responsible for:}
-    \cvlistitem{IBM AIX Unix servers}
-    \cvlistitem{Oracle Data Integrator and IBM DataStage management}
+\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{ascen}}{System Administrator and Developer}{Ascen Sp. z o.o}{Warsaw}{Full time}
+{Working as system administrator as well as a developer for Ascen. Taking part in multiple projects involving Extracting, Transforming and Loading data. Amongst them:}
+    \cvlistitem{ETL solution for LOT Polish Airlines. This included loading and exporting data in multiple formats in Microsoft SSIS and designing a robust logging infrastructure for reliable ETL process monitoring.}
+    \cvlistitem{Reporting solution for Polish Office for Foreigners. Creation of a comprehensive backup plan and testing and resolving performance issues with MS Reporting Services and SharePoint.}
+    \cvlistitem{Infrastructure for sharing of a 3D rendering farm. Automation solution for starting Autodesk Backburner jobs.}
+    \cvlistitem{Support of IBM DataStage for TUiR Warta. Diagnosing and resolving IBM Information Server issues.}
+\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{System Administrator}{Raiffeisen Polbank S.A.}{Warsaw}{Full time}
+{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups. Responsible for:}
+    \cvlistitem{IBM AIX Unix servers, Oracle Data Integrator and IBM DataStage management}
     \cvlistitem{Analyzing and diagnosing SQL database problems}
-    \cvlistitem{Identifying and relying defects together with bank system admins and project group managers}
     \cvlistitem{Management of file sharing between migration environments and project teams}
     \cvlistitem{Automation of tasks with scripts (Bash, AWK, SQL)}
-\cventry{2011--2013\\\includegraphics[width=\hintscolumnwidth]{trinity}}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices. Responsible for:}
+\cventry{2011--2013\\\includegraphics[width=\hintscolumnwidth]{trinity}}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}
+{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices. Responsible for:}
     \cvlistitem{Windows 2003 and 2008 as well as Linux(Ubuntu Server) servers}
     \cvlistitem{Performance monitoring of IT infrastructure(Cacti, Graylog2)}
     \cvlistitem{Automatization of IT processes(storage backups, data conversions)}
@@ -84,9 +82,9 @@
     \cvitem{Languages}{C, C\# , Python, Ruby, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX}
     \cvitem{Systems}{GNU/Linux(Debian, Ubuntu and Gentoo), Windows Server 2003 to 2012, IBM AIX Unix}
     \cvitem{Networks}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
-    \cvitem{Tools}{Git, GNU Make, VIM, Microsoft RSAT, MS SQL Studio, MS Office Suite}
-    \cvitem{Platforms}{Chef, Fabric, Apache, nginx, lighttpd, Samba, NFS, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS}
-    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, Oracle Database Integrator, IBM DataStage, SQL Server Integration Services i Reporting Services, SharePoint 2012}
+    \cvitem{Tools}{Git, GNU Make, VIM, Microsoft RSAT, MS SQL Studio}
+    \cvitem{Platforms}{Chef, Ansible, Fabric, Apache, nginx, lighttpd, Gunicorn, uWSGI, Samba, NFS, Symantec Backup Exec, Cacti, Graylog2, iptables, bind, postfix, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS}
+    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Oracle Database Integrator, IBM DataStage, SQL Server Integration Services and Reporting Services, SharePoint 2012}
 
 \section{Courses and certificates}
     \cvitem{2014}{Oracle Exadata Technical Boot Camp}
