remove footer, change title

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -17,7 +17,7 @@
 %% Personal data
 \firstname{Jakub}
 \familyname{Sokołowski}
-\title{DevOps and Event Management Specialist}
+\title{System Administrator and Developer}
 \address{110 Cedar House}{Mespil Estate, Sussex Road}{Dublin, D04 T9W3}
 \mobile{+48 600 858 250}
 \mobile{+353 87 112 8563}
@@ -90,5 +90,4 @@
     \cvitem{2014}{Oracle Exadata Technical Boot Camp}
     \cvitem{2014}{IBM InfoSphere Guardium Data Security course}
     
-\lfoot{\scriptsize{Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w mojej aplikacji dla potrzeb niezbędnych do realizacji procesów rekrutacji (zgodnie z Ustawą z dnia 29 sierpnia 1997 r. o ochronie danych osobowych tj. Dz. U. z 2002 r., Nr 101, poz. 926, ze zm.).}}
 \end{document}
