update with amazon data

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -17,12 +17,11 @@
 %% Personal data
 \firstname{Jakub}
 \familyname{Sokołowski}
-\title{Administrator Systemów}
-\address{Warszawa 01-684}{Klaudyny 32 m 1}
-\mobile{600~858~250}
-\phone{+48~(22)~833~77~50}
+\title{Administrator Systemów i Developer}
+\address{110 Cedar House}{Mespil Estate, Sussex Road}{Dublin, D04 T9W3}
+\mobile{+48 600 858 250}
+\mobile{+353 87 112 8563}
 \email{panswiata@gmail.com}
-\homepage{github.com/PonderingGrower}
 \extrainfo{Urodzony 01.02.1988}
 \photo[74pt][0.5pt]{me}
 
@@ -36,32 +35,26 @@
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
 \section{Doświadczenie}
-\cventry{2014--Teraz\\\includegraphics[width=\hintscolumnwidth]{codility}}{System Administrator}{Codility Polska Sp. z o.o}{Warsaw}{Full time}{Zarządzanie wewnętrznymi narzędziami deweloperskimi oraz administracja i rozwój infrastruktury głównej usługi Codility. Odpowiedzialny za:}
-    \cvlistitem{Zarządzanie konfiguracją serwerów z użyciem systemu Chef}
-    \cvlistitem{Automatyzacja procesu wdrożenia przy pomocy skryptów Fabric}
+\cventry{2015--Now\\\includegraphics[width=\hintscolumnwidth]{aws}}{System Development Engineer}{Amazon Web Services}{Dublin}{Pełen etat}
+{W zespole odpowiedialnym za reagowanie na wydażenia w globalnej infrastrukturze AWS oraz tworzenie narzędzi do zarządzania takimi wydażeniami. Odpowiedzialny za:}
+\cvlistitem{Zebranie i prowadzenie zespołu w celu rozwiązania problemów wszelakiej natury}
+    \cvlistitem{Wyznaczanie zakresu projektów oraz architektura systemów}
+    \cvlistitem{Implementacja systemów do wykrywania i przewidywania wydażeń}
+    \cvlistitem{Automatyzacja tworzenia infrastruktur dla nowych systemów}
+    \cventry{2014--2015\\\includegraphics[width=\hintscolumnwidth]{codility}}{System Administrator}{Codility Polska Sp. z o.o}{Warsaw}{Pełen etat}{Zarządzanie wewnętrznymi narzędziami deweloperskimi oraz administracja i rozwój infrastruktury głównej usługi Codility. Odpowiedzialny za:}
+\cvlistitem{Zarządzanie serwerami przy pomocy Chef i automatyzacja wdrażenia przy pomocy Fabric.}
     \cvlistitem{Utrzymanie systemów monitorowania(Icinga, Grafana, Sentry, Pingdom)}
     \cvlistitem{Utrzymanie systemów logowania(logstash, elasticsearch, Kibana)}
     \cvlistitem{Integracja wewnętrznych systemów developerskich(Trac, GitLab, Jenkins)}
     \cvlistitem{Konsultacje z klientami na temat bezpieczeństwa danych oraz prywatności}
 \cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Deweloper}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administracja oraz tworzenie rozwiązań transformacji danych oraz raportowania na potrzeby wielu projektów. Między innymi:}
-    \cvitem{}{Tworzenie rozwiązania ETL dla Polskich Linii Lotniczych LOT}
-    \cvlistitem{Rozwijanie procesu ładowania i eksportowania danych w wielu formatach w Microsoft SSIS}
-    \cvlistitem{Projektowanie niezawodnej infrastruktury logowania na potrzeby monitorowania procesu ETL}
-    \cvitem{}{Tworzenie systemu raportowego dla Urzędu do Spraw Cudzoziemców}
-    \cvlistitem{Tworzenie pełnego planu kopii bezpieczeństwa}
-    \cvlistitem{Testowanie i rozwiązywanie problemów wydajności z Microsoft Reporting Services i SharePoint}
-    \cvlistitem{Rozwiązywanie problemów bezpieczeństwa witryn i certyfikatów}
-    \cvitem{}{Tworzenie infrastruktury do współdzielenia farmy renderującej 3D dla Nemotion Studios}
-    \cvlistitem{Oprogramowanie automatyzacji uruchamiania zadań Autodesk Backburner}
-    \cvlistitem{Konfiguracja dostępu dla klientów i partnerów poprzez FTP oraz WebDAV}
-    \cvitem{}{Wsparcie produktu IBM DataStage dla TUiR Warta}
-    \cvlistitem{Rozwiązywanie problemów komunikacji baz danych}
-    \cvlistitem{Diagnozowanie problemów IBM Information Server}
+    \cvlistitem{Rozwiązania ETL dla Polskich Linii Lotniczych LOT. W tym ładowanie i eksportowanie danych w wielu formatach w Microsoft SSIS oraz implementacja systemu logowania.}
+    \cvlistitem{Systemu raportowego dla Urzędu do Spraw Cudzoziemców. Tworzenie pełnego planu kopii bezpieczeństwa oraz testowanie i rozwiązywanie problemów wydajności z SSRS i SharePoint}
+    \cvlistitem{Infrastruktury do współdzielenia farmy renderującej 3D dla Nemotion Studios. Automatyzacja uruchamiania zadań Autodesk Backburner. Konfiguracja dostępu poprzez FTP oraz WebDAV}
+    \cvlistitem{Wsparcie produktu IBM DataStage dla TUiR Warta. Rozwiązywanie problemów komunikacji baz danych. Diagnozowanie problemów IBM Information Server}
 \cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{Administrator Systemów}{Raiffeisen Polbank S.A.}{Warszawa}{Pełen etat}{Administrowanie środowiskami migracyjnymi opartymi na systemach AIX Unix udostępniającymi usługi IBM DB2 oraz narzędzia migracyjne IBM oraz Oracle na potrzeby przeniesienia danych z systemów bazodanowych Polbank do RaiffeisenPolbank. Wykonywanie głównego procesu migracji oraz komunikacja z koordynatorami oraz grupami projektowymi. Odpowiedzialny za:}
-    \cvlistitem{Serwery IBM AIX Unix}
-    \cvlistitem{Zarządzanie Oracle Data Integrator oraz IBM DataStage}
+    \cvlistitem{Administracja Serwerami IBM AIX Unix, Oracle Data Integrator i IBM DataStage.}
     \cvlistitem{Analizowanie i diagnostyka problemów w bazach danych SQL}
-    \cvlistitem{Identyfikacja i przekazywanie defektów do adminów systemów bankowych i grup projektowych}
     \cvlistitem{Zarządzanie wymianą plików pomiędzy środowiskami migracyjnymi i grupami projektowymi}
     \cvlistitem{Automatyzacja zadań przy pomocy skryptów(Bash, AWK, SQL)}
 \cventry{2011--2013\\\includegraphics[width=\hintscolumnwidth]{trinity}}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie i opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów technicznych. Wykonywanie projektów, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych lub wdrażanie oprogramowania. Odpowiedzialny za:}
