update skills, remove obsolete

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -79,12 +79,12 @@
     \cvitemwithcomment{German}{Basic}{Basic understanding acquired in secondary school.}
 
 \section{Knowledge}
-    \cvitem{Languages}{C, C\# , Python, Ruby, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX}
-    \cvitem{Systems}{GNU/Linux(Debian, Ubuntu and Gentoo), Windows Server 2003 to 2012, IBM AIX Unix}
+    \cvitem{Languages}{C, C\# , Python, Ruby, JavaScript, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX}
+    \cvitem{Systems}{GNU/Linux(Debian, Ubuntu, Gentoo, and Amazon Linux), Windows Server, IBM AIX Unix}
     \cvitem{Networks}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
     \cvitem{Tools}{Git, GNU Make, VIM, Microsoft RSAT, MS SQL Studio}
-    \cvitem{Platforms}{Chef, Ansible, Fabric, Apache, nginx, lighttpd, Gunicorn, uWSGI, Samba, NFS, Symantec Backup Exec, Cacti, Graylog2, iptables, bind, postfix, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS}
-    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Oracle Database Integrator, IBM DataStage, SQL Server Integration Services and Reporting Services, SharePoint 2012}
+    \cvitem{Platforms}{Chef, Ansible, Fabric, Apache, nginx, lighttpd, Gunicorn, uWSGI, Samba, NFS, Cacti, Graylog2, iptables, bind, postfix, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS}
+    \cvitem{Extra}{Sage accounting systems, Oracle Database Integrator, IBM DataStage, SQL Server Integration Services and Reporting Services, SharePoint 2012}
 
 \section{Courses and certificates}
     \cvitem{2014}{Oracle Exadata Technical Boot Camp}
