--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -74,12 +74,12 @@
     \cvitemwithcomment{Niemiecki}{Podstawy}{Podstawowa znajomość nabyta w liceum.}
 
 \section{Umiejętności}
-\cvitem{Języki}{C, C\#, Python, Ruby, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX}
-\cvitem{Systemy}{GNU/Linux(Debian, Ubuntu i Getoo), Windows Server 2003 do 2012, IBM AIX Unix}
+\cvitem{Języki}{C, C\#, Python, Ruby, JavaScript, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX}
+\cvitem{Systemy}{GNU/Linux(Debian, Ubuntu i Getoo, Amazon Linux), Windows Server, IBM AIX Unix}
     \cvitem{Sieć}{Routing statyczny oraz dynamiczny RIP i OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
-    \cvitem{Narzędzia}{Microsoft RSAT, MS Powershell, MS SQL Studio, Pakiet MS Office, Git, GNU Make, VIM}
-    \cvitem{Platformy}{Chef, Fabric, Apache, nginx, lighttpd, Samba, NFS, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS}
-    \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Oracle Database Integrator, IBM DateStage, SQL Server Integration and Reporting Services, SharePoint 2012}
+    \cvitem{Narzędzia}{Git, GNU Make, Vim, Microsoft RSAT, MS Powershell}
+    \cvitem{Platformy}{Chef, Ansible, Fabric, Apache, nginx, lighttpd, Gunicorn, uWSGI, Samba, NFS, Cacti, Graylog2, iptables, bind, postfix, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS}
+    \cvitem{Specjalistyczne}{Oracle Database Integrator, IBM DateStage, SQL Server Integration and Reporting Services, SharePoint 2012}
 
 \section{Kursy i certyfikaty}
     \cvitem{2014}{Ukończony kurs Oracle Exadata Technical Boot Camp}
