--- a/cv_en.tex
+++ b/cv_en.tex
@@ -21,7 +21,7 @@
 \address{110 Cedar House}{Mespil Estate, Sussex Road}{Dublin, D04 T9W3}
 \mobile{+48 600 858 250}
 \mobile{+353 87 112 8563}
-\email{panswiata@gmail.com}
+\email{jakub@gsokolowski.com}
 \extrainfo{Born on 01.02.1988}
 \photo[74pt][0.5pt]{me}
 
