--- a/cv_en.tex
+++ b/cv_en.tex
@@ -21,8 +21,8 @@
 \address{110 Cedar House}{Mespil Estate, Sussex Road}{Dublin, D04 T9W3}
 \mobile{+48 600 858 250}
 \mobile{+353 87 112 8563}
-\email{jakub@gsokolowski.com}
-\homepage{https://gsokolowski.com/}
+\email{jakub@gsokolowski.eu}
+\homepage{gsokolowski.eu}
 \extrainfo{Born on 01.02.1988}
 \photo[74pt][0.5pt]{me}
 
