--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -22,7 +22,7 @@
 \mobile{+48 600 858 250}
 \mobile{+353 87 112 8563}
 \email{jakub@gsokolowski.com}
-\homepage{https://gsokolowski.com/}
+\homepage{gsokolowski.com}
 \extrainfo{Urodzony 01.02.1988}
 \photo[74pt][0.5pt]{me}
 
