--- a/cv_en.tex
+++ b/cv_en.tex
@@ -13,11 +13,13 @@
 %% For company logos
 \usepackage{graphicx}
 \graphicspath{{./images/}}
+%% Linking
+\usepackage{hyperref}
 
 %% Personal data
-\firstname{Jakub}
+\firstname{Jakub Grzegorz}
 \familyname{Sokołowski}
-\title{System Administrator and Developer}
+\title{Sysadmin, Developer, Jack of all Trades}
 \address{110 Cedar House}{Mespil Estate, Sussex Road}{Dublin, D04 T9W3}
 \mobile{+48 600 858 250}
 \mobile{+353 87 112 8563}
@@ -36,33 +38,39 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
-\cventry{2015--Now\\\includegraphics[width=\hintscolumnwidth]{aws}}{System Development Engineer}{Amazon Web Services}{Dublin}{Full time}
+\cventry{2015--Now
+    \\\href{https://aws.amazon.com/}{\\\includegraphics[width=\hintscolumnwidth]{aws}}}{System Development Engineer}{Dublin}{Full time}{}
 {Part of team responding to world wide breakage in Amazon infrastructure and developing tools for event detection, management, and automation. Responsible for:}
-    \cvlistitem{Large scale event management}
-    \cvlistitem{Assembling and leading event resolution teams}
-    \cvlistitem{System scoping and architecture design}
+    \cvlistitem{Large scale event management, assembling and leading event resolution teams}
     \cvlistitem{Development of tools for event management and detection}
     \cvlistitem{Development of infrastructure support and management tools}
-\cventry{2014--2015\\\includegraphics[width=\hintscolumnwidth]{codility}}{System Administrator}{Codility Polska Sp z o.o.}{Warsaw}{Full time}
+\vspace*{3mm}
+\cventry{2014--2015
+    \\\href{https://codility.com/}{\\\includegraphics[width=\hintscolumnwidth]{codility}}}{System Administrator}{Warsaw}{Full time}{}
 {Management of internal development tools and administration and expansion of infrastructure of the main Codility service. Responsible for:}
     \cvlistitem{Management of server configuration using Chef and deployments automation with Fabric}
     \cvlistitem{Maintenance of monitoring systems(Icinga, Grafana, Sentry, Pingdom)}
     \cvlistitem{Maintenance of logging systems(logstash, elasticsearch, Kibana)}
     \cvlistitem{Integration of internal development tools(Trac, GitLab, Jenkins)}
     \cvlistitem{Consultations with clients regarding data security and privacy}
-\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{ascen}}{System Administrator and Developer}{Ascen Sp. z o.o}{Warsaw}{Full time}
+\vspace*{3mm}
+\cventry{2013--2014
+    \\\href{http://ascen.pl/en/}{\\\includegraphics[width=\hintscolumnwidth]{ascen}}}{Sysadmin, Developer, ETL Specialist}{Warsaw}{Full time}{}
 {Working as system administrator as well as a developer for Ascen. Taking part in multiple projects involving Extracting, Transforming and Loading data. Amongst them:}
-    \cvlistitem{ETL solution for LOT Polish Airlines. This included loading and exporting data in multiple formats in Microsoft SSIS and designing a robust logging infrastructure for reliable ETL process monitoring.}
+    \cvlistitem{ETL solution for LOT Polish Airlines. Import/Export in multiple formats in Microsoft SSIS and designing a robust logging infrastructure for reliable ETL process monitoring.}
     \cvlistitem{Reporting solution for Polish Office for Foreigners. Creation of a comprehensive backup plan and testing and resolving performance issues with MS Reporting Services and SharePoint.}
-    \cvlistitem{Infrastructure for sharing of a 3D rendering farm. Automation solution for starting Autodesk Backburner jobs.}
-    \cvlistitem{Support of IBM DataStage for TUiR Warta. Diagnosing and resolving IBM Information Server issues.}
-\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{System Administrator}{Raiffeisen Polbank S.A.}{Warsaw}{Full time}
+    \cvlistitem{Building rendering farm 3D Autodesk Backburner workloads. Automation sharing solution.}
+    \cvlistitem{Support of IBM DataStage for TUiR Warta. Diagnosing IBM Information Server issues.}
+\cventry{2013--2014
+    \\\href{http://raiffeisenpolbank.com/}{\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}}{System Administrator}{Warsaw}{Full time}{}
 {Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups. Responsible for:}
     \cvlistitem{IBM AIX Unix servers, Oracle Data Integrator and IBM DataStage management}
     \cvlistitem{Analyzing and diagnosing SQL database problems}
     \cvlistitem{Management of file sharing between migration environments and project teams}
     \cvlistitem{Automation of tasks with scripts (Bash, AWK, SQL)}
-\cventry{2011--2013\\\includegraphics[width=\hintscolumnwidth]{trinity}}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}
+\vspace*{3mm}
+\cventry{2011--2013
+    \\\href{https://www.vistra.com/acquisitions/Trinity}{\\\includegraphics[width=\hintscolumnwidth]{trinity}}}{IT Specialist}{Warsaw}{Full time}{}
 {Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices. Responsible for:}
     \cvlistitem{Windows 2003 and 2008 as well as Linux(Ubuntu Server) servers}
     \cvlistitem{Performance monitoring of IT infrastructure(Cacti, Graylog2)}
@@ -72,7 +80,7 @@
 
 \section{Engineering thesis}
     \cvitem{Title}{\textbf{Sharing of Character Devices Over Networks in GNU/Linux Systems}}
-    \cvitem{Specialization}{System and Network Programming\hspace{20mm}Mark \textbf{5.0}}
+    \cvitem{Specialization}{System and Network Programming}
     \cvitem{Description}{A set of software made up of a server and a Linux kernel module that lets processes access a physical device that is connected to a remote machine in a completely transparent way.}
 
 \section{Foreign languages}
@@ -80,12 +88,14 @@
     \cvitemwithcomment{German}{Basic}{Basic understanding acquired in secondary school.}
 
 \section{Knowledge}
-    \cvitem{Languages}{C, C\# , Python, Ruby, JavaScript, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX}
-    \cvitem{Systems}{GNU/Linux(Debian, Ubuntu, Gentoo, and Amazon Linux), Windows Server, IBM AIX Unix}
-    \cvitem{Networks}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
-    \cvitem{Tools}{Git, GNU Make, VIM, Microsoft RSAT, MS SQL Studio}
-    \cvitem{Platforms}{Chef, Ansible, Fabric, Apache, nginx, lighttpd, Gunicorn, uWSGI, Samba, NFS, Cacti, Graylog2, iptables, bind, postfix, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS}
-    \cvitem{Extra}{Sage accounting systems, Oracle Database Integrator, IBM DataStage, SQL Server Integration Services and Reporting Services, SharePoint 2012}
+    \cvitem{Languages}{C, C\#, Python, Ruby, JavaScript, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX}
+    \cvitem{Systems}{GNU/Linux(Debian, Ubuntu, Gentoo, Amazon Linux, RHEL), Windows Server, IBM AIX Unix}
+    \cvitem{Networking}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
+    \cvitem{Tools}{Git, GNU Make, VIM, Microsoft RSAT, MS SQL Studio, Gitlab, Github, Jira}
+    \cvitem{Platforms}{Chef, Ansible, Fabric, Apache, nginx, lighttpd, Gunicorn, uWSGI, Cacti, Graylog2, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS}
+    \cvitem{AWS}{EC2, S3, Glacier, RDS, IAM, SES, SQS, Lambda}
+    \cvitem{WebDev}{React, Redux, Backbone.js}
+    \cvitem{Extra}{IBM DataStage, SQL Server Integration Services and Reporting Services, SharePoint}
 
 \section{Courses and certificates}
     \cvitem{2014}{Oracle Exadata Technical Boot Camp}
