remove unused phone number

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -20,9 +20,8 @@
 \title{Administrator Systemów i Developer}
 \address{110 Cedar House}{Mespil Estate, Sussex Road}{Dublin, D04 T9W3}
 \mobile{+48 600 858 250}
-\mobile{+353 87 112 8563}
-\email{jakub@gsokolowski.com}
-\homepage{gsokolowski.com}
+\email{jakub@gsokolowski.pl}
+\homepage{gsokolowski.pl}
 \extrainfo{Urodzony 01.02.1988}
 \photo[74pt][0.5pt]{me}
 
