add technologies, update address

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -18,7 +18,7 @@
 \firstname{Jakub Grzegorz}
 \familyname{Sokołowski}
 \title{Sysadmin, Developer, Jack of all Trades}
-\address{110 Cedar House}{Mespil Estate, Sussex Road}{Dublin, D04 T9W3}
+\address{Klaudyny 32 Apt. 1}{Warsaw, 01-684}{Poland}
 \mobile{+48 600 858 250}
 \email{jakub@gsokolowski.eu}
 \homepage{gsokolowski.eu}
@@ -90,8 +90,8 @@
     \cvitem{Networking}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
     \cvitem{Tools}{Git, GNU Make, VIM, Microsoft RSAT, MS SQL Studio, Gitlab, Github, Jira}
     \cvitem{Platforms}{Chef, Ansible, Fabric, Apache, nginx, lighttpd, Gunicorn, uWSGI, Cacti, Graylog2, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS}
-    \cvitem{AWS}{EC2, S3, Glacier, RDS, IAM, SES, SQS, Lambda}
-    \cvitem{WebDev}{React, Redux, Backbone.js}
+    \cvitem{AWS}{EC2, S3, Route53, CloudFront, Glacier, RDS, IAM, SES, SQS, Lambda}
+    \cvitem{WebDev}{React, Redux, Backbone.js, GraphQL, Relay}
     \cvitem{Extra}{IBM DataStage, SQL Server Integration Services and Reporting Services, SharePoint}
 
 \section{Courses and certificates}
