--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -18,7 +18,7 @@
 \firstname{Jakub}
 \familyname{Sokołowski}
 \title{Administrator Systemów i Developer}
-\address{110 Cedar House}{Mespil Estate, Sussex Road}{Dublin, D04 T9W3}
+\address{Klaudyny 32 lok 1}{Warszawa, 01-684}{Polska}
 \mobile{+48 600 858 250}
 \email{jakub@gsokolowski.pl}
 \homepage{gsokolowski.pl}
@@ -79,7 +79,9 @@
     \cvitem{Sieć}{Routing statyczny oraz dynamiczny RIP i OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
     \cvitem{Narzędzia}{Git, GNU Make, Vim, Microsoft RSAT, MS Powershell}
     \cvitem{Platformy}{Chef, Ansible, Fabric, Apache, nginx, lighttpd, Gunicorn, uWSGI, Samba, NFS, Cacti, Graylog2, iptables, bind, postfix, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS}
-    \cvitem{Specjalistyczne}{Oracle Database Integrator, IBM DateStage, SQL Server Integration and Reporting Services, SharePoint 2012}
+    \cvitem{AWS}{EC2, Route53, CloudFront, S3, Glacier, RDS, IAM, SES, SQS, Lambda}
+    \cvitem{WebDev}{React, Redux, Backbone.js, GraphQL, Relay}
+    \cvitem{Extra}{IBM DataStage, SQL Server Integration Services and Reporting Services, SharePoint}
 
 \section{Kursy i certyfikaty}
     \cvitem{2014}{Ukończony kurs Oracle Exadata Technical Boot Camp}
