--- a/cv_en.tex
+++ b/cv_en.tex
@@ -29,51 +29,68 @@
 \makecvtitle
 
 \section{Education}
-    \cventry{2007--2013}{Engineer}{Polish-Japanese Institute of Information Technology}{Warsaw}{\textit{Informatics}}{Engineering studies in Computer Networks department with specialization in ``System and Network Programming''}
+\cventry{2007--2013}{Engineer}{Polish-Japanese Institute of Information Technology}{Warsaw}{\textit{Informatics}}{\footnotesize Engineering studies in Computer Networks department with specialization in ``System and Network Programming''}
 
     \vspace*{3mm}
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
-\cventry{2015--Now
+\cventry{2018--Now
+    \\\href{https://status.im/}{\\\includegraphics[width=\hintscolumnwidth]{status}}}{DevOps Specialist}{Remote}{Full time}{}
+{Responsible for all infrastructure. Especially supporting and providing tools for all developers, testers and researchers at Status.im in order to let them move as fast as they need to.}
+{\footnotesize
+    \cvlistitem{Continuous Integration setup}
+    \cvlistitem{Scalable Ethereum node clusters and their monitoring and alarming}
+    \cvlistitem{Educating devs on importance of ops and security}
+}
+\vspace*{3mm}
+\cventry{2015--2018
     \\\href{https://aws.amazon.com/}{\\\includegraphics[width=\hintscolumnwidth]{aws}}}{System Development Engineer}{Dublin}{Full time}{}
 {Part of team responding to world wide breakage in Amazon infrastructure and developing tools for event detection, management, and automation. Responsible for:}
+{\footnotesize
     \cvlistitem{Large scale event management, assembling and leading event resolution teams}
     \cvlistitem{Development of tools for event management and detection}
     \cvlistitem{Development of infrastructure support and management tools}
+}
 \vspace*{3mm}
 \cventry{2014--2015
     \\\href{https://codility.com/}{\\\includegraphics[width=\hintscolumnwidth]{codility}}}{System Administrator}{Warsaw}{Full time}{}
-{Management of internal development tools and administration and expansion of infrastructure of the main Codility service. Responsible for:}
+    {Management of internal development tools and administration and expansion of infrastructure of the main Codility service. Responsible for:}
+{\footnotesize
     \cvlistitem{Management of server configuration using Chef and deployments automation with Fabric}
-    \cvlistitem{Maintenance of monitoring systems(Icinga, Grafana, Sentry, Pingdom)}
-    \cvlistitem{Maintenance of logging systems(logstash, elasticsearch, Kibana)}
+    \cvlistitem{Maintenance of monitoring(Icinga, Grafana, Sentry, Pingdom) and logging(logstash, elasticsearch, Kibana)}
     \cvlistitem{Integration of internal development tools(Trac, GitLab, Jenkins)}
-    \cvlistitem{Consultations with clients regarding data security and privacy}
+}
 \vspace*{3mm}
 \cventry{2013--2014
     \\\href{http://ascen.pl/en/}{\\\includegraphics[width=\hintscolumnwidth]{ascen}}}{Sysadmin, Developer, ETL Specialist}{Warsaw}{Full time}{}
-{Working as system administrator as well as a developer for Ascen. Taking part in multiple projects involving Extracting, Transforming and Loading data. Amongst them:}
-    \cvlistitem{ETL solution for LOT Polish Airlines. Import/Export in multiple formats in Microsoft SSIS and designing a robust logging infrastructure for reliable ETL process monitoring.}
-    \cvlistitem{Reporting solution for Polish Office for Foreigners. Creation of a comprehensive backup plan and testing and resolving performance issues with MS Reporting Services and SharePoint.}
+    {Working as system administrator as well as a developer for Ascen. Taking part in multiple projects involving Extracting, Transforming and Loading data. Amongst them:}
+{\footnotesize
+    \cvlistitem{ETL solution for LOT Polish Airlines. Data import/export in Microsoft SSIS and designing a logging infrastructure for ETL process monitoring.}
+    \cvlistitem{Reporting solution for Polish Office for Foreigners. Comprehensive backup plan, testing and resolving performance issues with MS Reporting Services and SharePoint.}
     \cvlistitem{Building rendering farm 3D Autodesk Backburner workloads. Automation sharing solution.}
     \cvlistitem{Support of IBM DataStage for TUiR Warta. Diagnosing IBM Information Server issues.}
+}
 \cventry{2013--2014
     \\\href{http://raiffeisenpolbank.com/}{\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}}{System Administrator}{Warsaw}{Full time}{}
-{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups. Responsible for:}
+    {Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups. Responsible for:}
+{\footnotesize
     \cvlistitem{IBM AIX Unix servers, Oracle Data Integrator and IBM DataStage management}
     \cvlistitem{Analyzing and diagnosing SQL database problems}
     \cvlistitem{Management of file sharing between migration environments and project teams}
     \cvlistitem{Automation of tasks with scripts (Bash, AWK, SQL)}
+}
 \vspace*{3mm}
 \cventry{2011--2013
     \\\href{https://www.vistra.com/acquisitions/Trinity}{\\\includegraphics[width=\hintscolumnwidth]{trinity}}}{IT Specialist}{Warsaw}{Full time}{}
-{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices. Responsible for:}
+    {Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices. Responsible for:}
+{\footnotesize
     \cvlistitem{Windows 2003 and 2008 as well as Linux(Ubuntu Server) servers}
     \cvlistitem{Performance monitoring of IT infrastructure(Cacti, Graylog2)}
     \cvlistitem{Automatization of IT processes(storage backups, data conversions)}
     \cvlistitem{Hardware maintenance(servers, routers, workstations)}
     \cvlistitem{Management of services, such as: MS SQL, MS Exchange, MySQL, Hyper-V, Postfix, Git}
+}
 
 \section{Engineering thesis}
     \cvitem{Title}{\textbf{Sharing of Character Devices Over Networks in GNU/Linux Systems}}
@@ -85,14 +102,13 @@
     \cvitemwithcomment{German}{Basic}{Basic understanding acquired in secondary school.}
 
 \section{Knowledge}
-    \cvitem{Languages}{C, C\#, Python, Ruby, JavaScript, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX}
+    \cvitem{Languages}{C, C\#, Python, Ruby, JavaScript, Java, Bash, AWK, Powershell, SQL, Lua, Solidity, \LaTeX}
     \cvitem{Systems}{GNU/Linux(Debian, Ubuntu, Gentoo, Amazon Linux, RHEL), Windows Server, IBM AIX Unix}
     \cvitem{Networking}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
     \cvitem{Tools}{Git, GNU Make, VIM, Microsoft RSAT, MS SQL Studio, Gitlab, Github, Jira}
-    \cvitem{Platforms}{Chef, Ansible, Fabric, Apache, nginx, lighttpd, Gunicorn, uWSGI, Cacti, Graylog2, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS}
+    \cvitem{Platforms}{Chef, Ansible, Fabric, Terraform, Apache, nginx, lighttpd, Gunicorn, uWSGI, Grafana, Graphite, Graylog2, Netada, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS}
     \cvitem{AWS}{EC2, S3, Route53, CloudFront, Glacier, RDS, IAM, SES, SQS, Lambda}
     \cvitem{WebDev}{React, Redux, Backbone.js, GraphQL, Relay}
-    \cvitem{Extra}{IBM DataStage, SQL Server Integration Services and Reporting Services, SharePoint}
 
 \section{Courses and certificates}
     \cvitem{2014}{Oracle Exadata Technical Boot Camp}
