--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -15,10 +15,10 @@
 \graphicspath{{./images/}}
 
 %% Personal data
-\firstname{Jakub}
+\firstname{Jakub Grzegorz}
 \familyname{Sokołowski}
 \title{Administrator Systemów i Developer}
-\address{Klaudyny 32 lok 1}{Warszawa, 01-684}{Polska}
+\address{Klaudyny 32 lok. 1}{Warszawa, 01-684}{Polska}
 \mobile{+48 600 858 250}
 \email{jakub@gsokolowski.pl}
 \homepage{gsokolowski.pl}
@@ -29,40 +29,64 @@
 \makecvtitle
 
 \section{Edukacja}
-    \cventry{2007--2013}{Inżynier}{Polsko-Japońska Wyższa Szkoła Technik Komputerowych}{Warszawa}{\textit{Informatyka}}{Studia inżynierskie ukończone w katerze Sieci Komputerowych na specjalizacji ``Programowanie Systemowe i Sieciowe''.}
+    \cventry{2007--2013}{Inżynier}{Polsko-Japońska Wyższa Szkoła Technik Komputerowych}{Warszawa}{\textit{Informatyka}}{\footnotesize Studia inżynierskie w katerze Sieci Komputerowych na specjalizacji ``Programowanie Systemowe i Sieciowe''.}
 
     \vspace*{3mm}
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
 \section{Doświadczenie}
-\cventry{2015--Now\\\includegraphics[width=\hintscolumnwidth]{aws}}{System Development Engineer}{Amazon Web Services}{Dublin}{Pełen etat}
-{W zespole odpowiedialnym za reagowanie na wydażenia w globalnej infrastrukturze AWS oraz tworzenie narzędzi do zarządzania takimi wydażeniami. Odpowiedzialny za:}
-\cvlistitem{Zebranie i prowadzenie zespołu w celu rozwiązania problemów wszelakiej natury}
+\cventry{2018--Now\\\includegraphics[width=\hintscolumnwidth]{status}}{Specialista DevOps}{Status.im}{Zdalna}{Pełen etat}
+    {Odpowiedzialny za całą infrastrukture. Zwłaszcza wspieranie i dostarczanie narzędzi dla deweloperów, testerów, oraz badaczy Status.im aby pozwolić im poruszać się tak szybko jak chcą.}
+{\footnotesize
+    \cvlistitem{Konfiguracja systemów "Ciągłej integracji"}
+    \cvlistitem{Skalowalne grupy węzłów Ethereum oraz ich monitoring i alarmy }
+    \cvlistitem{Edukacje deweloperów w zakresie operacji i bezpieczeństwa}
+}
+\vspace*{3mm}
+\cventry{2015--2018\\\includegraphics[width=\hintscolumnwidth]{aws}}{System Development Engineer}{Amazon Web Services}{Dublin}{Pełen etat}
+    {W zespole odpowiedialnym za reagowanie na wydażenia w globalnej infrastrukturze AWS oraz tworzenie narzędzi do zarządzania takimi wydażeniami. Odpowiedzialny za:}
+{\footnotesize
     \cvlistitem{Wyznaczanie zakresu projektów oraz architektura systemów}
     \cvlistitem{Implementacja systemów do wykrywania i przewidywania wydażeń}
     \cvlistitem{Automatyzacja tworzenia infrastruktur dla nowych systemów}
-    \cventry{2014--2015\\\includegraphics[width=\hintscolumnwidth]{codility}}{System Administrator}{Codility Polska Sp. z o.o}{Warsaw}{Pełen etat}{Zarządzanie wewnętrznymi narzędziami deweloperskimi oraz administracja i rozwój infrastruktury głównej usługi Codility. Odpowiedzialny za:}
-\cvlistitem{Zarządzanie serwerami przy pomocy Chef i automatyzacja wdrażenia przy pomocy Fabric.}
+}
+\vspace*{3mm}
+\cventry{2014--2015\\\includegraphics[width=\hintscolumnwidth]{codility}}{System Administrator}{Codility Polska Sp. z o.o}{Warsaw}{Pełen etat}
+    {Zarządzanie wewnętrznymi narzędziami deweloperskimi oraz administracja i rozwój infrastruktury głównej usługi Codility. Odpowiedzialny za:}
+{\footnotesize
+    \cvlistitem{Zarządzanie serwerami przy pomocy Chef i automatyzacja wdrażenia przy pomocy Fabric.}
     \cvlistitem{Utrzymanie systemów monitorowania(Icinga, Grafana, Sentry, Pingdom)}
     \cvlistitem{Utrzymanie systemów logowania(logstash, elasticsearch, Kibana)}
     \cvlistitem{Integracja wewnętrznych systemów developerskich(Trac, GitLab, Jenkins)}
-    \cvlistitem{Konsultacje z klientami na temat bezpieczeństwa danych oraz prywatności}
-\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Deweloper}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administracja oraz tworzenie rozwiązań transformacji danych oraz raportowania na potrzeby wielu projektów. Między innymi:}
+}
+\vspace*{3mm}
+\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Deweloper}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}
+    {Administracja oraz tworzenie rozwiązań transformacji danych oraz raportowania na potrzeby wielu projektów. Między innymi:}
+{\footnotesize
     \cvlistitem{Rozwiązania ETL dla Polskich Linii Lotniczych LOT. W tym ładowanie i eksportowanie danych w wielu formatach w Microsoft SSIS oraz implementacja systemu logowania.}
     \cvlistitem{Systemu raportowego dla Urzędu do Spraw Cudzoziemców. Tworzenie pełnego planu kopii bezpieczeństwa oraz testowanie i rozwiązywanie problemów wydajności z SSRS i SharePoint}
     \cvlistitem{Infrastruktury do współdzielenia farmy renderującej 3D dla Nemotion Studios. Automatyzacja uruchamiania zadań Autodesk Backburner. Konfiguracja dostępu poprzez FTP oraz WebDAV}
     \cvlistitem{Wsparcie produktu IBM DataStage dla TUiR Warta. Rozwiązywanie problemów komunikacji baz danych. Diagnozowanie problemów IBM Information Server}
-\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{Administrator Systemów}{Raiffeisen Polbank S.A.}{Warszawa}{Pełen etat}{Administrowanie środowiskami migracyjnymi opartymi na systemach AIX Unix udostępniającymi usługi IBM DB2 oraz narzędzia migracyjne IBM oraz Oracle na potrzeby przeniesienia danych z systemów bazodanowych Polbank do RaiffeisenPolbank. Wykonywanie głównego procesu migracji oraz komunikacja z koordynatorami oraz grupami projektowymi. Odpowiedzialny za:}
+}
+\vspace*{3mm}
+\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{Administrator Systemów}{Raiffeisen Polbank S.A.}{Warszawa}{Pełen etat}
+    {Administrowanie środowiskami migracyjnymi opartymi na systemach AIX Unix udostępniającymi usługi IBM DB2 oraz narzędzia migracyjne IBM oraz Oracle na potrzeby przeniesienia danych z systemów bazodanowych Polbank do RaiffeisenPolbank. Wykonywanie głównego procesu migracji oraz komunikacja z koordynatorami oraz grupami projektowymi. Odpowiedzialny za:}
+{\footnotesize
     \cvlistitem{Administracja Serwerami IBM AIX Unix, Oracle Data Integrator i IBM DataStage.}
     \cvlistitem{Analizowanie i diagnostyka problemów w bazach danych SQL}
     \cvlistitem{Zarządzanie wymianą plików pomiędzy środowiskami migracyjnymi i grupami projektowymi}
     \cvlistitem{Automatyzacja zadań przy pomocy skryptów(Bash, AWK, SQL)}
-\cventry{2011--2013\\\includegraphics[width=\hintscolumnwidth]{trinity}}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie i opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów technicznych. Wykonywanie projektów, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych lub wdrażanie oprogramowania. Odpowiedzialny za:}
+}
+\vspace*{3mm}
+\cventry{2011--2013\\\includegraphics[width=\hintscolumnwidth]{trinity}}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}
+    {Pełen etat}{Nadzorowanie i opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów technicznych. Wykonywanie projektów, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych lub wdrażanie oprogramowania. Odpowiedzialny za:}
+{\footnotesize
     \cvlistitem{Serwery Windows(2003 oraz 2008) oraz Linux(Ubuntu Server)}
     \cvlistitem{Monitorowanie działalności systemów informatycznych(Cacti, Graylog2)}
     \cvlistitem{Automatyzację wszelkich procesów informatycznych(kopie bezpieczeństwa, konwersje danych)}
     \cvlistitem{Infrastrukturę fizyczną środowiska IT(serwery, routery, komputery biurowe)}
     \cvlistitem{Zarządzenie usługami takimi jak: MS SQL, MS Exchange, MySQL, Hyper-V, Postfix, Git}
+}
 
 \section{Praca Inżynierska}
     \cvitem{Tytuł}{\textbf{Udostępnianie Znakowych Urządzeń za Pośrednictwem Sieci w Systemach GNU/Linux}}
@@ -74,14 +98,13 @@
     \cvitemwithcomment{Niemiecki}{Podstawy}{Podstawowa znajomość nabyta w liceum.}
 
 \section{Umiejętności}
-\cvitem{Języki}{C, C\#, Python, Ruby, JavaScript, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX}
+\cvitem{Języki}{C, C\#, Python, Ruby, JavaScript, Java, Bash, AWK, Powershell, SQL, Lua, Solidity, \LaTeX}
 \cvitem{Systemy}{GNU/Linux(Debian, Ubuntu i Getoo, Amazon Linux), Windows Server, IBM AIX Unix}
     \cvitem{Sieć}{Routing statyczny oraz dynamiczny RIP i OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
     \cvitem{Narzędzia}{Git, GNU Make, Vim, Microsoft RSAT, MS Powershell}
-    \cvitem{Platformy}{Chef, Ansible, Fabric, Apache, nginx, lighttpd, Gunicorn, uWSGI, Samba, NFS, Cacti, Graylog2, iptables, bind, postfix, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS}
+    \cvitem{Platformy}{Chef, Ansible, Fabric, Terraform, Apache, nginx, lighttpd, Gunicorn, uWSGI, Samba, NFS, Grafana, Graphite, Graylog2, Netdata, iptables, bind, postfix, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS}
     \cvitem{AWS}{EC2, Route53, CloudFront, S3, Glacier, RDS, IAM, SES, SQS, Lambda}
     \cvitem{WebDev}{React, Redux, Backbone.js, GraphQL, Relay}
-    \cvitem{Extra}{IBM DataStage, SQL Server Integration Services and Reporting Services, SharePoint}
 
 \section{Kursy i certyfikaty}
     \cvitem{2014}{Ukończony kurs Oracle Exadata Technical Boot Camp}
